--- a/Portfolio/aviation.html
+++ b/Portfolio/aviation.html
@@ -11,6 +11,7 @@
 <body>
     <nav>
         <ul>
+            <li><a href="main.html">Bio</a></li>
             <li><a href="sports.html">Sports</a></li>
             <li><a href="life.html">Life</a></li>
             <li><a href="aviation.html">Aviation</a></li>
