--- a/Portfolio/life.html
+++ b/Portfolio/life.html
@@ -12,6 +12,7 @@
 <body>
     <nav>
         <ul>
+            <li><a href="main.html">Bio</a></li>
             <li><a href="sports.html">Sports</a></li>
             <li><a href="life.html">Life</a></li>
             <li><a href="aviation.html">Aviation</a></li>
@@ -37,7 +38,7 @@
 
                 <figcaption>Woof, I'm Astro and Im 12 weeks old. I am the sweetest Lil
                             Devil.</figcaption>
-                <img id="astro" src="images/AstroStairs.jpg">
+                <img id="astro" src="images/Astro.jpg">
 
             </article>
         </div>
