--- a/Portfolio/main.html
+++ b/Portfolio/main.html
@@ -18,7 +18,7 @@
             <li><a href="aviation.html">Aviation</a></li>
         </ul>
     </nav>
-    
+
     <div class="hero-image">
         <div class="hero-text">
             <h1 style="font-size:50px;">Dez Nguyen</h1>
@@ -51,6 +51,18 @@
                         <li>IG: adventurousoul</li>
                         <li><a href="mailto:desng5@gmail.com"></a>desng5@gmail.com</li>
                     </ul>
+                </div>
+                <div>
+                    <form action="">
+                        <div>
+                            <input type="email" name="email" id="email" placeholder="Your Email" required>
+                            <input type="tel" name="phone" id="phone" placeholder="Your Phone Number" required>
+                        <textarea name="message" id="message" cols="30" rows="10"
+                            placeholder="Questions or Message"></textarea>
+                        <div>
+                            <button>Submit</button>
+                        </div>
+                    </form>
                 </div>
             </article>
 
