--- a/Portfolio/sports.html
+++ b/Portfolio/sports.html
@@ -10,6 +10,7 @@
 <body style="font-family: Arial, Helvetica, sans-serif;">
     <nav>
         <ul>
+            <li><a href="main.html">Bio</a></li>
             <li><a href="sports.html">Sports</a></li>
             <li><a href="life.html">Life</a></li>
             <li><a href="aviation.html">Aviation</a></li>
