--- a/Portfolio/Portfolio/index.html
+++ b/Portfolio/Portfolio/index.html
@@ -62,11 +62,11 @@
                  <div class="col-12 col-sm-4 mt-4">
                     <a href="#" class="row text-decoration-none">
                         <div class="col-2 col-sm-12 mb-4">
-                            <img src="/images/pups.jpg" alt="Logan Hike" class="image-fluid" width="100%" height="100%" loading="lazy">
+                            <img src="/images/BeachTeam.jpg" alt="Logan Hike" class="image-fluid" width="100%" height="100%" loading="lazy">
                         </div>
                         <div class="col-10">
-                            <h3>Logan Astro</h3>
-                            <p>Two crazy pup sisters trotting throuhg life eating kibs and hanging with their moms</p>
+                            <h3>US Women's National Team </h3>
+                            <p> Indoor and Beach Handball </p>
                             <p><i class="bi bi-arrow-right-short"></i></p>
                         </div>
                     </a>  
@@ -75,11 +75,11 @@
                  <div class="col-12 col-sm-4 mt-4">
                     <a href="#" class="row text-decoration-none">
                         <div class="col-2 col-sm-12 mb-4">
-                            <img src="/images/pups.jpg" alt="Logan Hike" class="image-fluid" width="100%" height="100%" loading="lazy">
+                            <img src="/images/Heli.jpg" alt="Logan Hike" class="image-fluid" width="100%" height="100%" loading="lazy">
                         </div>
                         <div class="col-10">
-                            <h3>Logan Astro</h3>
-                            <p>Two crazy pup sisters trotting throuhg life eating kibs and hanging with their moms</p>
+                            <h3>Aviation</h3>
+                            <p>Previous Career Path</p>
                             <p><i class="bi bi-arrow-right-short"></i></p>
                         </div>
                     </a>  
