updated contacts page image and text area

--- a/Portfolio/Portfolio/index.html
+++ b/Portfolio/Portfolio/index.html
@@ -102,10 +102,10 @@
                 <path
                     d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z" />
             </svg>
-            </div>
+        
 
     </nav>
-    <!-- Flyout Navigation Start -->
+  
 
 
 
@@ -125,7 +125,7 @@
                 <div class="text-white">
                     <h1 class="hero__heading fw-bold mb-4">Desiree Nguyen</h1>
                     <p class="lead mb-4">Aspiring Developer</p>
-                    <a href="#" class="mt-2 btn btn-lg btn-outline-light" role="button">Contact Me</a>
+                    <a href="index.html" class="mt-2 btn btn-lg btn-outline-light" role="button">Contact Me</a>
 
                 </div>
 
